# ts-duckduckfit

./: .dockerignore  .env.example  .gitignore  .prettierignore  40-env.sh  DOCS.md  Dockerfile  README.md  _tests.html  components.json  eslint.config.js  index.html  index.html.br  manifest.json  manifest.json.br  package.json  pnpm-lock.yaml  profile.html  profile.html.br  robots.txt  routines.html  settings.html  settings.html.br  signin.html  signin.html.br  signup.html  signup.html.br  sitemap.xml  sitemap.xml.br  svelte.config.js  sync.html  sync.html.br  training-session-templates.html  vite.config.ts  weight-tracker.html  weight-tracker.html.br  workout-templates.html  workout-templates.html.br  workouts.html  workouts.html.br
.github/workflows/: web.yml
.well-known/: apple-app-site-association  assetlinks.json  assetlinks.json.br
_app/: env.js  env.js.br  version.json  version.json.br
_app/immutable/assets/: 0.BG_o3q13.css  0.BG_o3q13.css.br  0.BYuWuClJ.css  0.BYuWuClJ.css.br  0.B_vJu4q5.css  0.B_vJu4q5.css.br  0.BlEbexPw.css  0.BlEbexPw.css.br  0.BspvpXQL.css  0.BspvpXQL.css.br  0.BuXDv-kR.css  0.BuXDv-kR.css.br  0.C5PRbcZo.css  0.C5PRbcZo.css.br  0.C7C-1kJH.css  0.C7C-1kJH.css.br  0.C8awQxFM.css  0.C8awQxFM.css.br  0.CJRN688U.css  0.CJRN688U.css.br  0.CnjzRiVb.css  0.CnjzRiVb.css.br  0.D-pLdiHS.css  0.D-pLdiHS.css.br  0.D48lHpld.css  0.D48lHpld.css.br  0.D716jvNj.css  0.D716jvNj.css.br  0.DVM6ONJF.css  0.DVM6ONJF.css.br  0.DXVFRhtM.css  0.DXVFRhtM.css.br  0.DY_O7a-b.css  0.DY_O7a-b.css.br  0.DavOnqL5.css  0.DavOnqL5.css.br  0.Dl3P5USx.css  0.Dl3P5USx.css.br  0.DycIZAz4.css  0.DycIZAz4.css.br  (+69 more)
_app/immutable/chunks/: -7mDlKSa.js  -7mDlKSa.js.br  (+2359 more)
helm/duckduckfit-ui/: Chart.yaml  README.md  values.yaml
messages/: de.json  en.json  es.json
project.inlang/: project_id  settings.json
settings/: application.html  application.html.br  profile.html  profile.html.br  sync.html  sync.html.br
src/: app.css  app.d.ts  app.html  app2.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: Numbers.test.ts  Numbers.ts  automergeState.svelte.ts  diff.test.ts  diff.ts  error.ts  lazy.ts  repo.ts  util.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts
training-session-templates/: add.html
workout-templates/: add.html  add.html.br
(+2684 files in other folders)
