[package]
name = "duckduckfit"
version = "0.1.0"
description = "The Fitness App"
authors = ["nathanfaucett@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Faucett-GmbH/ts-duckduckfit"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "duckduckfit"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7", features = ["devtools"] }
tauri-plugin-log = "2.6"
tauri-plugin-deep-link = "2.4"
tauri-plugin-shell = "2.3"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = "2.3"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
